[gd_scene load_steps=31 format=3 uid="uid://b8ypy7da0iumc"]

[ext_resource type="Texture2D" uid="uid://coj0d33vyyqx1" path="res://src/players/player_knight/bullet.webp" id="1"]
[ext_resource type="Script" path="res://src/enemies/demon_slime/demonslime.gd" id="1_sst8a"]
[ext_resource type="Texture2D" uid="uid://dj10iq4gtssud" path="res://src/enemies/demon_slime/spritesheets/demon_slime_FREE_v1.0_288x160_spritesheet.png" id="2_0gb5m"]
[ext_resource type="Shader" path="res://shaders/aura.gdshader" id="3_vwe3b"]
[ext_resource type="Texture2D" uid="uid://cy4h5265jtuo1" path="res://assets/vfx/BloodFX Batch 1/VFX Blood Batch 1_SpriteSheetRows.png" id="6_20ael"]
[ext_resource type="Script" path="res://src/enemies/bringer_death/vision_attack.gd" id="6_bgura"]
[ext_resource type="FontFile" uid="uid://c7cw2kl16m035" path="res://assets/ui/ThaleahFat.ttf" id="7_ftsth"]

[sub_resource type="CanvasItemMaterial" id="1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xdy3y"]
shader = ExtResource("3_vwe3b")
shader_parameter/aura_width = 2.0
shader_parameter/aura_color = null

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_trng1"]
radius = 5.74948
height = 46.2785

[sub_resource type="Animation" id="8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:scale_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Sword2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/Sword2D/CollisionShape2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-6.28319]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/Sword2D/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6.36364, 25)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Explosion:scale_amount_max")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:collision_layer")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite2D:frame_coords")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_7peve"]
resource_name = "attack"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58]
}

[sub_resource type="Animation" id="Animation_8krr1"]

[sub_resource type="Animation" id="Animation_ls1kw"]
resource_name = "attack_2"
length = 0.65
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/Sword2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.65),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [true, false, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Sword2D/CollisionShape2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.7, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-6.28319, -4.87121, -4.70366, -1.81514, -5.04051, -1.8134, -1.33867, -1.33867, -1.33867, -4.39823, -4.05964, -4.73857]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/Sword2D/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(6.36364, 25), Vector2(-6.36363, -1.36365), Vector2(-29.0909, -18.6364), Vector2(-17.7273, -21.8182), Vector2(79.0909, 62.2727), Vector2(69.5455, 62.7273), Vector2(69.5455, 62.7273), Vector2(27.2727, 68.6364), Vector2(1.81818, 68.6364), Vector2(-5.45454, 65), Vector2(-7.72728, 60.4545), Vector2(5.90909, 67.2727)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58]
}

[sub_resource type="Animation" id="2"]
resource_name = "destroy"
length = 1.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Sprite2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(0.0796601, 1),
"update": 0,
"values": [0.0, 180.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(2.2974, 0.183011, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -32), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Explosion:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Hit:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.00999999),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Explode:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".:collision_layer")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Explosion:scale_amount_min")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.6, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 4.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Explosion:scale_amount_max")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.6, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 4.0]
}

[sub_resource type="Animation" id="Animation_pskmh"]
resource_name = "hurt"
length = 0.16
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3)]
}

[sub_resource type="Animation" id="3"]
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_emkyg"]
resource_name = "invulnerable"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4), Vector2i(6, 4), Vector2i(7, 4), Vector2i(8, 4), Vector2i(9, 4), Vector2i(11, 4)]
}

[sub_resource type="Animation" id="Animation_c3jwl"]
resource_name = "spawn"
length = 0.5
step = 0.03
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27, 0.3, 0.33, 0.36, 0.39, 0.42, 0.45, 0.48, 0.51, 0.54, 0.57),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [108, 107, 106, 105, 104, 103, 102, 101, 100, 99, 98, 97, 96, 95, 93, 92, 91, 90, 89, 88]
}

[sub_resource type="Animation" id="4"]
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/Sword2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [25, 26, 27, 28, 30, 31, 32, 33]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0kjfc"]
_data = {
"RESET": SubResource("8"),
"attack_1": SubResource("Animation_7peve"),
"attack_1_reverse": SubResource("Animation_8krr1"),
"attack_2": SubResource("Animation_ls1kw"),
"dead": SubResource("2"),
"hurt": SubResource("Animation_pskmh"),
"idle": SubResource("3"),
"invulnerable": SubResource("Animation_emkyg"),
"spawn": SubResource("Animation_c3jwl"),
"walk": SubResource("4")
}

[sub_resource type="CapsuleShape2D" id="5"]
radius = 23.4545
height = 105.454

[sub_resource type="CanvasItemMaterial" id="6"]
blend_mode = 1

[sub_resource type="Gradient" id="7"]
offsets = PackedFloat32Array(0.5, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cka22"]
size = Vector2(779.091, 209.773)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8lqwm"]
size = Vector2(189.545, 104.545)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vd132"]
radius = 12.5
height = 115.0

[sub_resource type="Animation" id="Animation_27svx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="Animation" id="Animation_8qawk"]
resource_name = "blood_1"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 121, 122]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gw71f"]
_data = {
"RESET": SubResource("Animation_27svx"),
"blood_1": SubResource("Animation_8qawk")
}

[node name="EnemyDemon" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 24
script = ExtResource("1_sst8a")

[node name="PlatformDetector" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(0, 8)
collision_mask = 8

[node name="FloorDetectorLeft" type="RayCast2D" parent="."]
position = Vector2(-15, -4)
target_position = Vector2(0, 35)
collision_mask = 24

[node name="FloorDetectorRight" type="RayCast2D" parent="."]
position = Vector2(15.5, -3)
target_position = Vector2(0, 35)
collision_mask = 24

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("1")
position = Vector2(0, -60.4545)
texture = ExtResource("2_0gb5m")
flip_h = true
hframes = 22
vframes = 5

[node name="Sword2D" type="Area2D" parent="Sprite2D"]
disable_mode = 2
collision_layer = 3
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Sword2D"]
texture_filter = 2
material = SubResource("ShaderMaterial_xdy3y")
use_parent_material = true
position = Vector2(6.36364, 25)
rotation = -6.28319
scale = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_trng1")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0kjfc")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -33.6364)
shape = SubResource("5")

[node name="Explosion" type="CPUParticles2D" parent="."]
self_modulate = Color(1, 1, 1, 0.12)
material = SubResource("6")
emitting = false
amount = 32
lifetime = 0.5
one_shot = true
speed_scale = 1.2
explosiveness = 0.7
draw_order = 215832976
texture = ExtResource("1")
emission_shape = 1
emission_sphere_radius = 16.0
spread = 180.0
gravity = Vector2(0, -250)
color_ramp = SubResource("7")

[node name="Hit" type="AudioStreamPlayer2D" parent="."]

[node name="Explode" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0.454545, 0.454545)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="Node2D" type="Node2D" parent="."]

[node name="BarraVidas" type="Control" parent="Node2D"]
layout_mode = 3
anchors_preset = 0
offset_left = 64.0
offset_top = -53.0
offset_right = 124.0
offset_bottom = -28.0
metadata/_edit_use_anchors_ = true

[node name="Fondo" type="ColorRect" parent="Node2D/BarraVidas"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.163636
anchor_bottom = 0.163636
offset_left = -82.1818
offset_top = 4.77616
offset_right = -52.1818
offset_bottom = 7.77616
color = Color(0, 0, 0, 0.329412)
metadata/_edit_use_anchors_ = true

[node name="VidaActual" type="ColorRect" parent="Node2D/BarraVidas"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0151515
anchor_top = 0.127273
anchor_right = 0.0151515
anchor_bottom = 0.127273
offset_left = -82.1818
offset_top = 3.9091
offset_right = -52.1818
offset_bottom = 6.9091
color = Color(0.223529, 0.67451, 0, 0.721569)
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("6_bgura")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.454546, -52.8408)
shape = SubResource("RectangleShape2D_cka22")

[node name="AttackArea2D" type="Area2D" parent="."]
script = ExtResource("6_bgura")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea2D"]
position = Vector2(-16.5909, -8.18182)
shape = SubResource("RectangleShape2D_8lqwm")

[node name="damage_zone" type="Area2D" parent="."]
position = Vector2(-12.5, 3.75)

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage_zone"]
position = Vector2(12.5, 11.25)
shape = SubResource("CapsuleShape2D_vd132")

[node name="Sprite2D" type="Sprite2D" parent="damage_zone"]
position = Vector2(12.2936, -35.5186)
rotation = -0.471239
texture = ExtResource("6_20ael")
flip_h = true
hframes = 14
vframes = 9
frame = 112
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "damage_zone/AnimationPlayer",
"slice": "",
"source": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="damage_zone"]
libraries = {
"": SubResource("AnimationLibrary_gw71f")
}

[node name="damage_label" type="Node2D" parent="damage_zone"]
visibility_layer = 1023

[node name="label" type="Label" parent="damage_zone/damage_label"]
offset_left = 48.5
offset_top = -57.75
offset_right = 72.5
offset_bottom = -42.75
theme_override_fonts/font = ExtResource("7_ftsth")
theme_override_font_sizes/font_size = 16
text = "10"

[node name="timer" type="Timer" parent="damage_zone/damage_label"]
wait_time = 0.1

[connection signal="area_entered" from="Sprite2D/Sword2D" to="." method="_on_sword_2d_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="AttackArea2D" to="." method="_on_attack_area_2d_area_entered"]
[connection signal="area_exited" from="AttackArea2D" to="." method="_on_attack_area_2d_area_exited"]
[connection signal="area_entered" from="damage_zone" to="." method="_on_damage_zone_area_entered"]
[connection signal="area_shape_entered" from="damage_zone" to="." method="_on_damage_zone_area_shape_entered"]
